--- a/templates/clusterroletemplatebinding.yaml
+++ b/templates/clusterroletemplatebinding.yaml
@@ -4,13 +4,14 @@
 
 {{ $root := . }}
 {{- range $index, $member := .Values.clusterMembers }}
+{{- $namespace := include "rancher-cluster-templates.derivedNamespace" . }}
 ---
 apiVersion: management.cattle.io/v3
-clusterName: c-m-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $root.Values.cluster.name)) }}
+clusterName: c-m-{{ trunc 8 (sha256sum (printf "%s/%s" $namespace $root.Values.cluster.name)) }}
 kind: ClusterRoleTemplateBinding
 metadata:
-  name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $member.principalName )) }}
-  namespace: c-m-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $root.Values.cluster.name)) }}
+  name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $namespace $member.principalName )) }}
+  namespace: c-m-{{ trunc 8 (sha256sum (printf "%s/%s" $namespace $root.Values.cluster.name)) }}
 roleTemplateName: {{ $member.roleTemplateName }}
 userPrincipalName: {{ $member.principalName }}
 {{- end }}
