--- a/templates/managedcharts.yaml
+++ b/templates/managedcharts.yaml
@@ -3,12 +3,13 @@
 
 {{- if .Values.addons.monitoring }}
 {{- if eq .Values.addons.monitoring.enabled true }}
+{{- $namespace := include "rancher-cluster-templates.derivedNamespace" $ }}
 ---
 apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: monitoring-crd-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "rancher-monitoring-crd"
   repoName: "rancher-charts"
@@ -26,7 +27,7 @@ apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: monitoring-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "rancher-monitoring"
   repoName: "rancher-charts"
@@ -67,7 +68,7 @@ apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: longhorn-crd-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "longhorn-crd"
   repoName: "rancher-charts"
@@ -108,7 +109,7 @@ apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: longhorn-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "longhorn"
   repoName: "rancher-charts"
@@ -131,7 +132,7 @@ apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: neuvector-crd-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "neuvector-crd"
   repoName: "rancher-charts"
@@ -149,7 +150,7 @@ apiVersion: management.cattle.io/v3
 kind: ManagedChart
 metadata:
   name: neuvector-{{ .Values.cluster.name }}
-  namespace: fleet-default
+  namespace: $namespace
 spec:
   chart: "neuvector"
   repoName: "rancher-charts"
