--- a/questions.yaml
+++ b/questions.yaml
@@ -407,9 +407,10 @@ questions:
   - variable: cluster.config.openstack.masterFlavorName
     description: 'OpenStack flavor name to use for the Master node'
     label: 'flavorName'
-    default: 'm1.medium'
+    default: 'm1.small'
     type: enum
     options:
+      - m1.small
       - m1.medium
     group: 'Master Nodepool'
   - variable: cluster.config.openstack.masterFlavorId
