Openstack CCM support
Signed-off-by: Radu Moisan <radu.moisan@gmail.com>

--- a/templates/openstack-cloud-config-secret.yaml
+++ b/templates/openstack-cloud-config-secret.yaml
@@ -11,6 +11,7 @@ metadata:
   namespace: {{$namespace}}
   annotations:
     rke.cattle.io/object-authorized-for-clusters: {{ .Values.cluster.name }}
+    provisioning.cattle.io/owned-by: {{ .Values.cluster.name }}
 type: Opaque
 stringData:
   cloud.conf: |
