Openstack CCM support
Signed-off-by: Radu Moisan <radu.moisan@gmail.com>

--- a/templates/openstack-cloud-config-secret.yaml
+++ b/templates/openstack-cloud-config-secret.yaml
@@ -10,7 +10,8 @@ metadata:
   name: {{ .Values.cluster.name }}-cloud-config
   namespace: {{$namespace}}
   annotations:
-    rke.cattle.io/object-authorized-for-clusters: {{ .Values.cluster.name }}
+    #rke.cattle.io/object-authorized-for-clusters: {{ .Values.cluster.name }}
+    rke.cattle.io/object-authorized-for-clusters: "*"
     #provisioning.cattle.io/owned-by: {{ printf "%s/%s" $namespace .Values.cluster.name }}
 type: Opaque
 stringData:
